--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DATABASE_URL=postgresql://postgres:zs546@localhost:5432/dashboard
-JWT_SECRET=zs546
+DATABASE_URL=postgresql://postgres:malwareapp@localhost:5432/ayuda
+JWT_SECRET=malwareapp
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
