--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:malwareapp@localhost:5432/ayuda
+DATABASE_URL=postgresql://postgres:malwareapp@localhost:5432/dashboard
 JWT_SECRET=malwareapp
 
 SMTP_HOST=smtp.gmail.com
